2008-05-20  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getModule): Don't resolve the module - let
	that be handled by evalToClass.

	* KawaPageServlet.java (getModule): Log when compiling a module.

2008-05-11  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getModule): Make better use new-ish module
	framework.  Especially, use checkCurrent to also check dependencies.

2007-09-08  Per Bothner  <per@bothner.com>

	* ReplSession.java: Override new emitPrompt, rather than lineStart.

2007-04-25  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getModule): Update to use ModuleInfo's
	setModuleClass.

2007-01-22  Per Bothner  <per@bothner.com>

	* ReplSession.java: (class OutBufferWriter): Extend XMLPrinter,
	now that XMLPrinter extends OutPort.

2007-01-13  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getModule): If path match to a directory,
	keep looking for a file match or +default+.
	Check if module is current even if it was a +default+.
	Set InPort's path using ModuleInfo's absolute Path.

2007-01-03  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java (getModule): Use ModuleInfo's new
	getSourceAbsPathname method.

	* KawaServlet.java (doGet): Set currentPath to relative to requestURL.
	* ServletCallContext.java (getBaseUri): Remove method.

2007-01-02  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java: Update to use URIPath.
	* ReplSession.java: Update to use Paths.

2006-12-20  Per Bothner  <per@bothner.com>

 	* Makefile.am (KAWA1): Remove unneeded macro.

2006-12-06  Per Bothner  <per@bothner.com>

	* ReplSession.java: Update for renamed Consumer methods.
	* KawaServlet.java: Likewise.

2006-12-04  Per Bothner  <per@bothner.com>

	* KawaPageServlet.java: Update to use ModuleInfo.sourceAbsPath.

2006-11-22  Per Bothner  <per@bothner.com>

	* ReplSession.java: Partially revert changes from 11-17 and 11-18.

2006-11-17  Per Bothner  <per@bothner.com>

	* ReplSession.java: Update writeChar -> append.
